[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "card-printing-table"
version = "0.1.0"
description = "Card Printing Table application"
authors = [{ name = "Auto Generated" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "sqlalchemy",
    "pandas",
    "python-dateutil",
    "pytz",
    "typer[all]",
    "streamlit",
    "openpyxl",
    "rapidfuzz",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
]

[project.scripts]
cards = "cards.cli:app"

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.mypy]
ignore_missing_imports = true
